# eter

./: .clang-tidy  .gitignore  AI-GUIDELINES.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE.txt  README.md  x
.githooks/: pre-commit  pre-push
.github/workflows/: deploy-docs.yml  deployDocs  fedora-x86.yml
include/eter/Base/: DiagnosticEngine.h  PhaseDiagnostic.h  SourceBuffer.h  StringInterner.h
include/eter/Driver/: Driver.h  PackSession.h  ParcelSession.h
include/eter/Lexer/: TokenKinds.def
include/eter/NameResolution/: DefIndex.h
include/eter/Parser/: ASTNodes.h  NodeKinds.def  NodePool.h  Parser.h  ParserDiagnostics.def  ParserDiagnostics.h  Regime.h  TokenStream.h
lib/: CMakeLists.txt
lib/Base/: CMakeLists.txt  DiagnosticEngine.cpp  PhaseDiagnostic.cpp  SourceBuffer.cpp  StringInterner.cpp
lib/Driver/: Driver.cpp  Version.cpp
lib/Lexer/: Lexer.cpp
lib/Parser/: CMakeLists.txt  NodePool.cpp  ParseConst.cpp  ParseDecl.cpp  ParseExpr.cpp  ParsePat.cpp  ParseStmt.cpp  ParseType.cpp  Parser.cpp  TokenStream.cpp
test/: CMakeLists.txt
unittests/: .clang-tidy  CMakeLists.txt
unittests/Base/: DiagnosticEngineTest.cpp  SourceBufferTest.cpp  SourceManagerTest.cpp  SpanTest.cpp
unittests/Driver/: DriverTest.cpp
unittests/GoldenTests/Inputs/: identifiers.et
unittests/Lexer/: CMakeLists.txt  LexerGoldenTest.cpp  LexerHelper.h  LexerTest.cpp
unittests/Parser/: ASTNodesTest.cpp  CMakeLists.txt  ParseExprTest.cpp  ParseStatementTest.cpp  TestParserConstDecl.cpp  TestParserDecl.cpp  TestParserDiagnostics.cpp  TestParserDocComments.cpp  TestParserExpr.cpp  TestParserFnDecl.cpp  TestParserHelper.h
